# ds-interview-mcp-server

./: README.md  _smoke_test.py  pyproject.toml  tool_manifest.json
docs/: DESIGN.md  SETUP.md
src/ds_interview_mcp/: __init__.py  config.py  server.py
src/ds_interview_mcp/skills/: __init__.py  ab_testing_experimentation.md  churn_analytics_retention.md  cohort_analysis_retention.md  funnel_analysis_conversion.md  product_metrics_frameworks.md  sql_for_product_analytics.md
src/ds_interview_mcp/skills/ab-testing/: SKILL.md
src/ds_interview_mcp/skills/behavioral-interview/: SKILL.md
src/ds_interview_mcp/skills/churn-analytics/: SKILL.md
src/ds_interview_mcp/skills/cohort-retention/: SKILL.md
src/ds_interview_mcp/skills/funnel-analysis/: SKILL.md
src/ds_interview_mcp/skills/product-metrics/: SKILL.md
src/ds_interview_mcp/skills/product-sense/: SKILL.md
src/ds_interview_mcp/skills/python-data-analysis/: SKILL.md
src/ds_interview_mcp/skills/sql-analytics/: SKILL.md
src/ds_interview_mcp/skills/statistics-analytics/: SKILL.md
src/ds_interview_mcp/tools/: __init__.py  ab_testing_tools.py  content_tools.py  interview_tools.py  quiz_tools.py  sql_tools.py  stats_tools.py
tests/: test_tools.py
